tests/ui/cast_targets/postgres/fail/sqlite_marker_in_postgres.stderr
error[E0277]: the trait bound `drizzle_types::sqlite::types::Integer: CastTarget<'_, Int4, PostgresDialect>` is not satisfied
  --> tests/ui/cast_targets/postgres/fail/sqlite_marker_in_postgres.rs:14:64
   |
14 |         cast::<_, _, drizzle::postgres::types::Int4>(user.age, drizzle_types::sqlite::types::Integer);
   |         --------------------------------------------           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `CastTarget<'_, Int4, PostgresDialect>` is not implemented for `drizzle_types::sqlite::types::Integer`
   |         |
   |         required by a bound introduced by this call
   |
help: the trait `CastTarget<'a, T, D>` is implemented for `&'a str`
  --> core/src/expr/util.rs
   |
   | impl<'a, T: DataType, D> CastTarget<'a, T, D> for &'a str {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `drizzle::core::expr::cast`
  --> core/src/expr/util.rs
   |
   | pub fn cast<'a, V, E, Target>(
   |        ---- required by a bound in this function
   |     expr: E,
   |     target_type: impl CastTarget<'a, Target, V::DialectMarker>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `cast`
